// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper 2. render test renders correctly 1`] = `
<span
  class="kd-input-wrapper kd-input-wrapper-size-middle kd-inputNumber kd-inputNumber-stepper"
>
  <span
    class="kd-input-prefix"
  >
    <span
      class="kd-inputNumber-baseStep kd-inputNumber-baseStep-decrease kd-inputNumber-baseStep-middle"
    >
      <i
        class="kdicon kd-inputNumber-icon kdicon-reduce"
      />
    </span>
  </span>
  <input
    class="kd-input kd-input-size-middle"
    prefix="[object Object]"
    stepperrref="[object Object]"
    type="text"
    value=""
  />
  <span
    class="kd-input-suffix"
  >
    <span
      class="kd-inputNumber-baseStep kd-inputNumber-baseStep-increase kd-inputNumber-baseStep-middle"
    >
      <i
        class="kdicon kd-inputNumber-icon kdicon-add"
      />
    </span>
  </span>
</span>
`;

exports[`Stepper 2. render test renders correctly 2`] = `
<span
  class="kd-input-wrapper kd-input-wrapper-size-middle kd-inputNumber kd-inputNumber-stepper"
>
  <input
    class="kd-input kd-input-size-middle"
    stepperrref="[object Object]"
    type="text"
    value=""
  />
  <span
    class="kd-input-suffix"
  >
    <span
      class="kd-inputNumber-embedStep kd-inputNumber-embedStep-middle"
    >
      <span
        class="kd-inputNumber-embedStep-plus"
      >
        <i
          class="kdicon kd-inputNumber-icon kdicon-arrow-up"
        />
      </span>
      <span
        class="kd-inputNumber-embedStep-minus"
      >
        <i
          class="kdicon kd-inputNumber-icon kdicon-arrow-down"
        />
      </span>
    </span>
  </span>
</span>
`;

exports[`Stepper 2. render test renders correctly 3`] = `
<span
  class="kd-input-wrapper kd-input-wrapper-size-middle kd-inputNumber kd-inputNumber-stepper"
>
  <span
    class="kd-input-prefix"
  >
    <span
      class="kd-inputNumber-baseStep kd-inputNumber-baseStep-decrease kd-inputNumber-baseStep-middle"
    >
      <i
        class="kdicon kd-inputNumber-icon kdicon-reduce"
      />
    </span>
  </span>
  <input
    class="kd-input kd-input-size-middle"
    prefix="[object Object]"
    stepperrref="[object Object]"
    type="text"
    value=""
  />
  <span
    class="kd-input-suffix"
  >
    <span
      class="kd-inputNumber-baseStep kd-inputNumber-baseStep-increase kd-inputNumber-baseStep-middle"
    >
      <i
        class="kdicon kd-inputNumber-icon kdicon-add"
      />
    </span>
  </span>
</span>
`;
